corect with inteface-list and added interface-list__one-item

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -177,7 +177,7 @@
             </button>
           </span>
           <ul class="interface-list">
-            <li>
+            <li class="interface-list__one-item">
               <div class="sign-in__item-container">
                 <h1 class="sign-in__title">My data</h1>
                 <svg class="icon-pencil" width="24px" height="24px">
@@ -264,7 +264,7 @@
                 <button class="sign-in btn">Save changes</button>
               </form>
             </li>
-            <li>
+            <li class="interface-list__one-item">
               <span class="interface-list__item"
                 >History of orders
                 <button class="btnArrow">
@@ -282,37 +282,43 @@
 
               <div class="cards-history">
                 <span class="cards-history__subtext"
-                  >Order #3528190, <data>16.08.2023</data
+                  >Order #3528190, <data>16.08.2023 </data
                   ><time>16:30</time></span
                 >
-                <button>&#10095;</button>
+                <button class="cards-history__btn-icon">&#10095;</button>
                 <div class="cards-history-container">
                   <p class="cards-history__text">In processing</p>
                   <span class="cards-history__price">$90</span>
                 </div>
                 <div class="card-images">
-                  <img
-                    class="card-small-tube"
-                    src="../img/small-tube.png"
-                    width="61px"
-                    height="72px"
-                    alt="tube"
-                  />
-                  <img
-                    class="card-small-tube"
-                    src="../img/small-tube.png"
-                    width="61px"
-                    height="72px"
-                    alt="tube"
-                  />
+                  <ul class="card-images__list">
+                    <li class="card-images__item">
+                      <img
+                        class="card-small-tube"
+                        src="../img/small-tube.png"
+                        width="61px"
+                        height="72px"
+                        alt="tube"
+                      />
+                    </li>
+                    <li class="card-images__item">
+                      <img
+                        class="card-small-tube"
+                        src="../img/small-tube.png"
+                        width="61px"
+                        height="72px"
+                        alt="tube"
+                      />
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="cards-history">
                 <span class="cards-history__subtext"
-                  >Order #3528190, <data>16.08.2023</data
-                  ><time>16:30</time></span
+                  >Order #3428320, <data>13.08.2023 </data
+                  ><time>11:50</time></span
                 >
-                <button>&#10095;</button>
+                <button class="cards-history__btn-icon">&#10095;</button>
                 <div class="cards-history-container">
                   <p class="cards-history__text customer">
                     Goes to the customer
@@ -320,71 +326,87 @@
                   <span class="cards-history__price">$120</span>
                 </div>
                 <div class="card-images">
-                  <img
-                    class="card-small-tube"
-                    src="../img/small-tube.png"
-                    width="61px"
-                    height="72px"
-                    alt="tube"
-                  />
-                  <img
-                    class="card-small-tube"
-                    src="../img/small-tube.png"
-                    width="61px"
-                    height="72px"
-                    alt="tube"
-                  />
-                  <img
-                    class="card-small-tube"
-                    src="../img/small-tube.png"
-                    width="61px"
-                    height="72px"
-                    alt="tube"
-                  />
+                  <ul class="card-images__list">
+                    <li class="card-images__item">
+                      <img
+                        class="card-small-tube"
+                        src="../img/small-tube.png"
+                        width="61px"
+                        height="72px"
+                        alt="tube"
+                      />
+                    </li>
+                    <li class="card-images__item">
+                      <img
+                        class="card-small-tube"
+                        src="../img/small-tube.png"
+                        width="61px"
+                        height="72px"
+                        alt="tube"
+                      />
+                    </li>
+                    <li class="card-images__item">
+                      <img
+                        class="card-small-tube"
+                        src="../img/small-tube.png"
+                        width="61px"
+                        height="72px"
+                        alt="tube"
+                      />
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="cards-history">
                 <span class="cards-history__subtext"
-                  >Order #3528190, <data>16.08.2023</data
-                  ><time>16:30</time></span
+                  >Order #4128380, <data>29.07.2023 </data
+                  ><time>14:34</time></span
                 >
-                <button>&#10095;</button>
+                <button class="cards-history__btn-icon">&#10095;</button>
                 <div class="cards-history-container">
                   <p class="cards-history__text delivered">Delivered</p>
                   <span class="cards-history__price">$60</span>
                 </div>
                 <div class="card-images">
-                  <img
-                    class="card-small-tube"
-                    src="../img/small-tube.png"
-                    width="61px"
-                    height="72px"
-                    alt="tube"
-                  />
+                  <ul class="card-images__list">
+                    <li class="card-images__item">
+                      <img
+                        class="card-small-tube"
+                        src="../img/small-tube.png"
+                        width="61px"
+                        height="72px"
+                        alt="tube"
+                      />
+                    </li>
+                  </ul>
                 </div>
               </div>
               <div class="cards-history">
                 <span class="cards-history__subtext"
-                  >Order #3528190, <data>16.08.2023</data
-                  ><time>16:30</time></span
+                  >Order #7528897, <data>12.07.2023 </data
+                  ><time>13:32</time></span
                 >
-                <button>&#10095;</button>
+                <button class="cards-history__btn-icon">&#10095;</button>
                 <div class="cards-history-container">
                   <p class="cards-history__text canceled">Canceled</p>
                   <span class="cards-history__price">$30</span>
                 </div>
                 <div class="card-images">
-                  <img
-                    class="card-small-tube"
-                    src="../img/small-tube.png"
-                    width="61px"
-                    height="72px"
-                    alt="tube"
-                  />
+                  <ul class="card-images__list">
+                    <li class="card-images__item">
+                      <img
+                        class="card-small-tube"
+                        src="../img/small-tube.png"
+                        width="61px"
+                        height="72px"
+                        alt="tube"
+                      />
+                    </li>
+                  </ul>
                 </div>
               </div>
             </li>
-            <li>
+            <li class="interface-list__one-item">
               <span class="interface-list__item"
                 >Payment cards
                 <button class="btnArrow">
