added marcup from card-history__wrapper

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -312,6 +312,26 @@
                     </li>
                   </ul>
                 </div>
+
+                <div class="card-history__wrapper">
+                  <div
+                    class="card-history__wrapper-image-container card-images__item"
+                  >
+                    <img
+                      class="card-history__wrapper-image"
+                      width="96px"
+                      height="120px"
+                      src="../img/icons/my-account/product-small-tube.png"
+                      alt="small-tube"
+                    />
+                  </div>
+
+                  <h2>Lorem ipsum dolor sit amet</h2>
+                  <p>Category name</p>
+                  <p>100 capsuls</p>
+                  <span>1 item</span>
+                  <span>$50</span>
+                </div>
               </div>
               <div class="cards-history">
                 <span class="cards-history__subtext"
