--- a/html/my-account.html
+++ b/html/my-account.html
@@ -332,7 +332,36 @@
                   <span>1 item</span>
                   <span>$50</span>
                 </div>
+                <div class="card-history__wrapper">
+                  <div
+                    class="card-history__wrapper-image-container card-images__item"
+                  >
+                    <img
+                      class="card-history__wrapper-image"
+                      width="96px"
+                      height="120px"
+                      src="../img/icons/my-account/product-small-tube.png"
+                      alt="small-tube"
+                    />
+                  </div>
+
+                  <h2>Consectetur adipiscing elit</h2>
+                  <p>Category name</p>
+                  <p>100 capsuls</p>
+                  <span>1 item</span>
+                  <span>$40</span>
+                </div>
+                <div class="card-history__total">
+                  <p>Cart total:</p>
+                  <span>$90</span>
+                  <p>Shipping:</p>
+                  <span>$20</span>
+                  <br />
+                  <b>Total amount:</b>
+                  <b><span>$110</span></b>
+                </div>
               </div>
+
               <div class="cards-history">
                 <span class="cards-history__subtext"
                   >Order #3428320, <data>13.08.2023 </data
