--- a/html/my-account.html
+++ b/html/my-account.html
@@ -327,8 +327,8 @@
                   </div>
 
                   <h2>Lorem ipsum dolor sit amet</h2>
-                  <p>Category name</p>
-                  <p>100 capsuls</p>
+                  <p class="cards-history__subtext">Category name</p>
+                  <p class="cards-history__subtext">100 capsuls</p>
                   <span>1 item</span>
                   <span>$50</span>
                 </div>
@@ -346,8 +346,8 @@
                   </div>
 
                   <h2>Consectetur adipiscing elit</h2>
-                  <p>Category name</p>
-                  <p>100 capsuls</p>
+                  <p class="cards-history__subtext">Category name</p>
+                  <p class="cards-history__subtext">100 capsuls</p>
                   <span>1 item</span>
                   <span>$40</span>
                 </div>
