--- a/html/my-account.html
+++ b/html/my-account.html
@@ -314,7 +314,7 @@
                 </div>
 
                 <div class="card-history__wrapper">
-                  <div
+                  <a
                     class="card-history__wrapper-image-container card-images__item"
                   >
                     <img
@@ -324,16 +324,17 @@
                       src="../img/icons/my-account/product-small-tube.png"
                       alt="small-tube"
                     />
+                  </a>
+                  <div class="card-history__info">
+                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <p class="cards-history__subtext">Category name</p>
+                    <p class="cards-history__subtext">100 capsuls</p>
+                    <span>1 item</span>
+                    <span>$50</span>
                   </div>
-
-                  <h2>Lorem ipsum dolor sit amet</h2>
-                  <p class="cards-history__subtext">Category name</p>
-                  <p class="cards-history__subtext">100 capsuls</p>
-                  <span>1 item</span>
-                  <span>$50</span>
                 </div>
                 <div class="card-history__wrapper">
-                  <div
+                  <a
                     class="card-history__wrapper-image-container card-images__item"
                   >
                     <img
@@ -343,13 +344,15 @@
                       src="../img/icons/my-account/product-small-tube.png"
                       alt="small-tube"
                     />
-                  </div>
+                  </a>
 
-                  <h2>Consectetur adipiscing elit</h2>
-                  <p class="cards-history__subtext">Category name</p>
-                  <p class="cards-history__subtext">100 capsuls</p>
-                  <span>1 item</span>
-                  <span>$40</span>
+                  <div class="card-history__info">
+                    <h2>Consectetur adipiscing elit</h2>
+                    <p class="cards-history__subtext">Category name</p>
+                    <p class="cards-history__subtext">100 capsuls</p>
+                    <span>1 item</span>
+                    <span>$40</span>
+                  </div>
                 </div>
                 <div class="card-history__total">
                   <p>Cart total:</p>
