update style from images

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -314,7 +314,7 @@
                 </div>
 
                 <div class="card-history__wrapper">
-                  <a
+                  <div
                     class="card-history__wrapper-image-container card-images__item"
                   >
                     <img
@@ -324,7 +324,7 @@
                       src="../img/icons/my-account/product-small-tube.png"
                       alt="small-tube"
                     />
-                  </a>
+                  </div>
                   <div class="card-history__info">
                     <h2>Lorem ipsum dolor sit amet</h2>
                     <p class="cards-history__subtext">Category name</p>
@@ -334,7 +334,7 @@
                   </div>
                 </div>
                 <div class="card-history__wrapper">
-                  <a
+                  <div
                     class="card-history__wrapper-image-container card-images__item"
                   >
                     <img
@@ -344,7 +344,7 @@
                       src="../img/icons/my-account/product-small-tube.png"
                       alt="small-tube"
                     />
-                  </a>
+                  </div>
 
                   <div class="card-history__info">
                     <h2>Consectetur adipiscing elit</h2>
