--- a/html/my-account.html
+++ b/html/my-account.html
@@ -330,8 +330,10 @@
                     <p class="cards-history__subtext">Category name</p>
                     <p class="cards-history__subtext">100 capsuls</p>
                   </div>
-                  <span>1 item</span>
-                  <span>$50</span>
+                  <div class="card-history-numbers">
+                    <span class="card-history__number">1 item</span>
+                    <span class="card-history__number">$50</span>
+                  </div>
                 </div>
                 <div class="card-history__wrapper">
                   <div
@@ -351,8 +353,10 @@
                     <p class="cards-history__subtext">100 capsuls</p>
                   </div>
 
-                  <span>1 item</span>
-                  <span>$40</span>
+                  <div class="card-history-numbers">
+                    <span class="card-history__number">1 item</span>
+                    <span class="card-history__number">$40</span>
+                  </div>
                 </div>
                 <div class="card-history__total">
                   <p>Cart total:</p>
