edit container card-history__wrapper

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -326,13 +326,15 @@
                     />
                   </div>
                   <div class="card-history__info">
-                    <h2>Lorem ipsum dolor sit amet</h2>
+                    <h2 class="card-history__title">
+                      Lorem ipsum dolor sit amet
+                    </h2>
                     <p class="cards-history__subtext">Category name</p>
                     <p class="cards-history__subtext">100 capsuls</p>
-                  </div>
-                  <div class="card-history-numbers">
-                    <span class="card-history__number">1 item</span>
-                    <span class="card-history__number">$50</span>
+                    <div class="card-history-numbers">
+                      <span class="card-history__number">1 item</span>
+                      <span class="card-history__number">$50</span>
+                    </div>
                   </div>
                 </div>
                 <div class="card-history__wrapper">
@@ -348,14 +350,15 @@
                     />
                   </div>
                   <div class="card-history__info">
-                    <h2>Consectetur adipiscing elit</h2>
+                    <h2 class="card-history__title">
+                      Consectetur adipiscing elit
+                    </h2>
                     <p class="cards-history__subtext">Category name</p>
                     <p class="cards-history__subtext">100 capsuls</p>
-                  </div>
-
-                  <div class="card-history-numbers">
-                    <span class="card-history__number">1 item</span>
-                    <span class="card-history__number">$40</span>
+                    <div class="card-history-numbers">
+                      <span class="card-history__number">1 item</span>
+                      <span class="card-history__number">$40</span>
+                    </div>
                   </div>
                 </div>
                 <div class="card-history__total">
