--- a/html/my-account.html
+++ b/html/my-account.html
@@ -362,13 +362,16 @@
                   </div>
                 </div>
                 <div class="card-history__total">
-                  <p>Cart total:</p>
-                  <span>$90</span>
-                  <p>Shipping:</p>
-                  <span>$20</span>
-                  <br />
-                  <b>Total amount:</b>
-                  <b><span>$110</span></b>
+                  <p class="card-history__total-text">
+                    Cart total:<span>$90</span>
+                  </p>
+                  <p class="card-history__total-text">
+                    Shipping:<span>$20</span>
+                  </p>
+
+                  <b class="card-history__total-text"
+                    >Total amount:<b><span>$110</span></b></b
+                  >
                 </div>
               </div>
 
