edit mistakes form js

--- a/html/my-account.html
+++ b/html/my-account.html
@@ -420,6 +420,68 @@
                     </li>
                   </ul>
                 </div>
+                <div class="card-history__box">
+                  <div class="card-history__wrapper">
+                    <div
+                      class="card-history__wrapper-image-container card-images__item"
+                    >
+                      <img
+                        class="card-history__wrapper-image"
+                        width="96px"
+                        height="120px"
+                        src="../img/icons/my-account/product-small-tube.png"
+                        alt="small-tube"
+                      />
+                    </div>
+                    <div class="card-history__info">
+                      <h2 class="card-history__title">
+                        Lorem ipsum dolor sit amet
+                      </h2>
+                      <p class="cards-history__subtext">Category name</p>
+                      <p class="cards-history__subtext">100 capsuls</p>
+                      <div class="card-history-numbers">
+                        <span class="card-history__number">1 item</span>
+                        <span class="card-history__number">$50</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-history__wrapper">
+                    <div
+                      class="card-history__wrapper-image-container card-images__item"
+                    >
+                      <img
+                        class="card-history__wrapper-image"
+                        width="96px"
+                        height="120px"
+                        src="../img/icons/my-account/product-small-tube.png"
+                        alt="small-tube"
+                      />
+                    </div>
+                    <div class="card-history__info">
+                      <h2 class="card-history__title">
+                        Consectetur adipiscing elit
+                      </h2>
+                      <p class="cards-history__subtext">Category name</p>
+                      <p class="cards-history__subtext">100 capsuls</p>
+                      <div class="card-history-numbers">
+                        <span class="card-history__number">1 item</span>
+                        <span class="card-history__number">$40</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-history__total">
+                    <p class="card-history__total-text">
+                      Cart total:<span>$90</span>
+                    </p>
+                    <p class="card-history__total-text">
+                      Shipping:<span>$20</span>
+                    </p>
+
+                    <b class="card-history__total-text"
+                      >Total amount:<b><span>$110</span></b></b
+                    >
+                  </div>
+                </div>
               </div>
               <div class="cards-history">
                 <span class="cards-history__subtext"
@@ -444,6 +506,68 @@
                     </li>
                   </ul>
                 </div>
+                <div class="card-history__box">
+                  <div class="card-history__wrapper">
+                    <div
+                      class="card-history__wrapper-image-container card-images__item"
+                    >
+                      <img
+                        class="card-history__wrapper-image"
+                        width="96px"
+                        height="120px"
+                        src="../img/icons/my-account/product-small-tube.png"
+                        alt="small-tube"
+                      />
+                    </div>
+                    <div class="card-history__info">
+                      <h2 class="card-history__title">
+                        Lorem ipsum dolor sit amet
+                      </h2>
+                      <p class="cards-history__subtext">Category name</p>
+                      <p class="cards-history__subtext">100 capsuls</p>
+                      <div class="card-history-numbers">
+                        <span class="card-history__number">1 item</span>
+                        <span class="card-history__number">$50</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-history__wrapper">
+                    <div
+                      class="card-history__wrapper-image-container card-images__item"
+                    >
+                      <img
+                        class="card-history__wrapper-image"
+                        width="96px"
+                        height="120px"
+                        src="../img/icons/my-account/product-small-tube.png"
+                        alt="small-tube"
+                      />
+                    </div>
+                    <div class="card-history__info">
+                      <h2 class="card-history__title">
+                        Consectetur adipiscing elit
+                      </h2>
+                      <p class="cards-history__subtext">Category name</p>
+                      <p class="cards-history__subtext">100 capsuls</p>
+                      <div class="card-history-numbers">
+                        <span class="card-history__number">1 item</span>
+                        <span class="card-history__number">$40</span>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="card-history__total">
+                    <p class="card-history__total-text">
+                      Cart total:<span>$90</span>
+                    </p>
+                    <p class="card-history__total-text">
+                      Shipping:<span>$20</span>
+                    </p>
+
+                    <b class="card-history__total-text"
+                      >Total amount:<b><span>$110</span></b></b
+                    >
+                  </div>
+                </div>
               </div>
               <div class="cards-history">
                 <span class="cards-history__subtext"
@@ -467,6 +591,68 @@
                       />
                     </li>
                   </ul>
+                </div>
+              </div>
+              <div class="card-history__box">
+                <div class="card-history__wrapper">
+                  <div
+                    class="card-history__wrapper-image-container card-images__item"
+                  >
+                    <img
+                      class="card-history__wrapper-image"
+                      width="96px"
+                      height="120px"
+                      src="../img/icons/my-account/product-small-tube.png"
+                      alt="small-tube"
+                    />
+                  </div>
+                  <div class="card-history__info">
+                    <h2 class="card-history__title">
+                      Lorem ipsum dolor sit amet
+                    </h2>
+                    <p class="cards-history__subtext">Category name</p>
+                    <p class="cards-history__subtext">100 capsuls</p>
+                    <div class="card-history-numbers">
+                      <span class="card-history__number">1 item</span>
+                      <span class="card-history__number">$50</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-history__wrapper">
+                  <div
+                    class="card-history__wrapper-image-container card-images__item"
+                  >
+                    <img
+                      class="card-history__wrapper-image"
+                      width="96px"
+                      height="120px"
+                      src="../img/icons/my-account/product-small-tube.png"
+                      alt="small-tube"
+                    />
+                  </div>
+                  <div class="card-history__info">
+                    <h2 class="card-history__title">
+                      Consectetur adipiscing elit
+                    </h2>
+                    <p class="cards-history__subtext">Category name</p>
+                    <p class="cards-history__subtext">100 capsuls</p>
+                    <div class="card-history-numbers">
+                      <span class="card-history__number">1 item</span>
+                      <span class="card-history__number">$40</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-history__total">
+                  <p class="card-history__total-text">
+                    Cart total:<span>$90</span>
+                  </p>
+                  <p class="card-history__total-text">
+                    Shipping:<span>$20</span>
+                  </p>
+
+                  <b class="card-history__total-text"
+                    >Total amount:<b><span>$110</span></b></b
+                  >
                 </div>
               </div>
             </li>
