--- a/html/my-account.html
+++ b/html/my-account.html
@@ -285,7 +285,9 @@
                   >Order #3528190, <data>16.08.2023 </data
                   ><time>16:30</time></span
                 >
-                <button class="cards-history__btn-icon">&#10095;</button>
+                <button type="button" class="cards-history__btn-icon">
+                  &#10095;
+                </button>
                 <div class="cards-history-container">
                   <p class="cards-history__text">In processing</p>
                   <span class="cards-history__price">$90</span>
@@ -376,7 +378,6 @@
                   </div>
                 </div>
               </div>
-
               <div class="cards-history">
                 <span class="cards-history__subtext"
                   >Order #3428320, <data>13.08.2023 </data
