added h1 and link constact.html

--- a/html/contact.html
+++ b/html/contact.html
@@ -164,8 +164,11 @@
         <div class="bradcrumbs">
           <a href="./home.html" class="bradcrumbs__link">Vital-J Empowering</a>
           <span>&#10095;</span>
-          <a href="./my-account.html" class="bradcrumbs__link">My account</a>
+          <a href="./contact.html" class="bradcrumbs__link">Contact us</a>
         </div>
+        <section class="contact-us">
+          <h1 class="sign-in__title">Contact us</h1>
+        </section>
       </div>
     </main>
   </body>
