added map and setings from burger-menu links

--- a/html/home.html
+++ b/html/home.html
@@ -59,7 +59,9 @@
         <nav>
           <ul class="navigation-main-list">
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">Home</a>
+              <a href="./home.html" class="navigation-main-list__item-link"
+                >Home</a
+              >
             </li>
             <li class="navigation-main-list__item">
               <a href="#" class="navigation-main-list__item-link">About us</a>
@@ -72,7 +74,9 @@
               </a>
             </li>
             <li class="navigation-main-list__item">
-              <a href="#" class="navigation-main-list__item-link">Contact us</a>
+              <a href="./contact.html" class="navigation-main-list__item-link"
+                >Contact us</a
+              >
             </li>
             <li class="navigation-main-list__item">
               <a href="#" class="navigation-main-list__item-link">FAQ</a>
@@ -127,10 +131,10 @@
               </svg>
             </a>
             <ul>
-              <li><a href="">Home</a></li>
+              <li><a href="./home.html">Home</a></li>
               <li><a href="">About us</a></li>
               <li><a href="">Shop</a></li>
-              <li><a href="">Contact us</a></li>
+              <li><a href="./contact.html">Contact us</a></li>
               <li><a href="">FAQ</a></li>
             </ul>
           </div>
