edit Amex icons from all pages

--- a/html/contact.html
+++ b/html/contact.html
@@ -235,23 +235,39 @@
         <div class="list-social-wrapper">
           <ul class="list list-social">
             <li class="list-social-item">
-              <a href="#"
-                ><svg
-                  width="39.000000"
-                  height="30.000000"
+              <a href="#"></a>
+                <svg
+                  width="39"
+                  height="30"
                   viewBox="0 0 39 30"
                   fill="none"
                   xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
                 >
-                  <desc>Created with Pixso.</desc>
+                  <g filter="url(#filter0_d_216_24030)">
+                    <rect
+                      x="4.22363"
+                      y="4.22363"
+                      width="30.5527"
+                      height="21.5527"
+                      rx="2.45989"
+                      fill="#1F72CD"
+                      stroke="#D9D9D9"
+                      stroke-width="0.447253"
+                    />
+                    <path
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                      d="M9.55765 11.792L6.65723 18.4348H10.1294L10.5599 17.3757H11.5438L11.9743 18.4348H15.7962V17.6265L16.1368 18.4348H18.1138L18.4543 17.6094V18.4348H26.4029L27.3694 17.4032L28.2744 18.4348L32.357 18.4434L29.4474 15.132L32.357 11.792H28.3377L27.3969 12.8046L26.5204 11.792H17.8734L17.1308 13.5066L16.3709 11.792H12.9059V12.5729L12.5205 11.792H9.55765ZM21.4271 12.7353H25.9916L27.3876 14.296L28.8287 12.7353H30.2247L28.1036 15.131L30.2247 17.4992H28.7653L27.3693 15.9204L25.9209 17.4992H21.4271V12.7353ZM22.5543 14.5923V13.7222V13.7213H25.4024L26.6451 15.1129L25.3473 16.5121H22.5543V15.5622H25.0444V14.5923H22.5543ZM10.2298 12.7353H11.9223L13.8462 17.2399V12.7353H15.7003L17.1862 15.965L18.5557 12.7353H20.4005V17.502H19.278L19.2688 13.7668L17.6323 17.502H16.6281L14.9824 13.7668V17.502H12.6731L12.2353 16.4334H9.87003L9.43314 17.5011H8.19583L10.2298 12.7353ZM10.2739 15.4454L11.0532 13.5417L11.8316 15.4454H10.2739Z"
+                      fill="#FCFCFC"
+                    />
+                  </g>
                   <defs>
                     <filter
-                      id="filter_216_3632_dd"
-                      x="0.000000"
-                      y="0.000000"
-                      width="39.000000"
-                      height="30.000000"
+                      id="filter0_d_216_24030"
+                      x="0.619192"
+                      y="0.619192"
+                      width="37.7616"
+                      height="28.7616"
                       filterUnits="userSpaceOnUse"
                       color-interpolation-filters="sRGB"
                     >
@@ -262,67 +278,28 @@
                         values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
                         result="hardAlpha"
                       />
-                      <feOffset dx="0" dy="4" />
-                      <feGaussianBlur stdDeviation="1.33333" />
-                      <feComposite
-                        in2="hardAlpha"
-                        operator="out"
-                        k2="-1"
-                        k3="1"
-                      />
+                      <feOffset />
+                      <feGaussianBlur stdDeviation="1.6904" />
+                      <feComposite in2="hardAlpha" operator="out" />
                       <feColorMatrix
                         type="matrix"
-                        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"
+                        values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.07 0"
                       />
                       <feBlend
                         mode="normal"
                         in2="BackgroundImageFix"
-                        result="effect_dropShadow_1"
+                        result="effect1_dropShadow_216_24030"
                       />
                       <feBlend
                         mode="normal"
                         in="SourceGraphic"
-                        in2="effect_dropShadow_1"
+                        in2="effect1_dropShadow_216_24030"
                         result="shape"
                       />
                     </filter>
                   </defs>
-                  <g filter="url(#filter_216_3632_dd)">
-                    <rect
-                      width="31.000000"
-                      height="22.000000"
-                      transform="translate(4.000000 0.000000)"
-                      fill="#FFFFFF"
-                      fill-opacity="0"
-                    />
-                    <rect
-                      x="4.223633"
-                      y="0.223633"
-                      rx="2.683517"
-                      width="30.552748"
-                      height="21.552748"
-                      fill="#1F72CD"
-                      fill-opacity="1.000000"
-                    />
-                    <rect
-                      x="4.223633"
-                      y="0.223633"
-                      rx="2.683517"
-                      width="30.552748"
-                      height="21.552748"
-                      stroke="#D9D9D9"
-                      stroke-opacity="1.000000"
-                      stroke-width="0.447253"
-                    />
-                    <path
-                      d="M6.65723 14.4348L9.55762 7.79199L12.5205 7.79199L12.906 8.57286L12.906 7.79199L16.371 7.79199L17.1309 9.50656L17.8734 7.79199L26.5204 7.79199L27.3969 8.80457L28.3378 7.79199L32.3569 7.79199L29.4474 11.132L32.3569 14.4434L28.2744 14.4348L27.3694 13.4032L26.403 14.4348L18.4543 14.4348L18.4543 13.6094L18.1138 14.4348L16.1367 14.4348L15.7961 13.6265L15.7961 14.4348L11.9742 14.4348L11.5438 13.3757L10.5599 13.3757L10.1294 14.4348L6.65723 14.4348ZM10.2299 8.73531L11.9224 8.73531L13.8462 13.2399L13.8462 8.73531L15.7003 8.73531L17.1863 11.9651L18.5557 8.73531L20.4005 8.73531L20.4005 13.502L19.278 13.502L19.2688 9.76685L17.6323 13.502L16.6282 13.502L14.9824 9.76685L14.9824 13.502L12.6731 13.502L12.2354 12.4334L9.87 12.4334L9.43311 13.5011L8.1958 13.5011L10.2299 8.73531ZM21.4271 8.73531L25.9916 8.73531L27.3876 10.296L28.8286 8.73531L30.2247 8.73531L28.1035 11.131L30.2247 13.4992L28.7654 13.4992L27.3693 11.9203L25.9209 13.4992L21.4271 13.4992L21.4271 8.73531ZM10.2739 11.4454L11.0532 9.5417L11.8315 11.4454L10.2739 11.4454ZM22.5543 10.5923L22.5543 9.72131L25.4023 9.72131L26.6451 11.1129L25.3473 12.5121L22.5543 12.5121L22.5543 11.5622L25.0444 11.5622L25.0444 10.5923L22.5543 10.5923Z"
-                      clip-rule="evenodd"
-                      fill="#FCFCFC"
-                      fill-opacity="1.000000"
-                      fill-rule="evenodd"
-                    />
-                  </g></svg
-              ></a>
+                </svg>
+              </a>
             </li>
             <li class="list-social-item">
               <a href="#"
