added new clases from p and span

--- a/html/contact.html
+++ b/html/contact.html
@@ -180,10 +180,10 @@
               height="288px"
             />
           </a>
-          <p>Information</p>
+          <p class="sign-in__subtitle">Information</p>
           <address>
-            <p>Address:<span>Hallandale Beach Florida, 33009</span></p>
-            <p>E-mail:<span>info@funisoxshop.com</span></p>
+            <p class="bradcrumbs__link bold">Address:<span class="bradcrumbs__link">Hallandale Beach Florida, 33009</span></p>
+            <p class="bradcrumbs__link bold">E-mail:<span class="bradcrumbs__link">info@funisoxshop.com</span></p>
           </address>
           <form class="js-myFormData" action="#">
             <fieldset class="form-data two">
