--- a/html/privacy-policy.html
+++ b/html/privacy-policy.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="../css/my-account.css" />
+    <link rel="stylesheet" href="../css/privacy-policy.css" />
   </head>
   <body>
     <header class="navigation">
